syntax = "proto3";

option csharp_namespace = "BlazorBoilerplate.Server";

message SendChatMessageRequest{
  /*
  Message from the User to the Chatbot
  includes the chat history
  example:"What is OMA-ML?"
  */
  repeated Chat_message chat_list = 1;

}

message SendChatMessageResponse{

  /*
  Response chunk from the chatbot
  Chunks should enable the "word-for-word" response
  example:""
  */
  string controller_response = 1;

}

message Chat_message{

  string message_string
  /*
  String that contains the a chatmessage
  example: "What is OMA-ML?"
  */

  bool isUser
  /*
  Flag that shows if the message was written by the User
  example: True //message was writen by the User
  */
}
